--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "ES2020",
-		"checkJs": true,  /* Typecheck .js files. */
+		"checkJs": false,
 		"lib": [
 			"ES2020"
 		]
