--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/vscode": "^1.66.0",
     "@types/glob": "^8.1.0",
     "@types/node": "20.2.5",
+    "cross-spawn": "^7.0.3",
     "eslint": "^8.41.0"
   }
 }
