--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "qakit",
     "boot"
   ],
-  "version": "0.0.8",
+  "version": "0.0.9",
   "publisher": "yessky",
   "repository": {
     "url": "https://github.com/yessky/devpack-bootstrap"
@@ -33,12 +33,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "devpack.BootFix",
-        "title": "%extension.BootFix.title%"
-      },
-      {
-        "command": "devpack.QAKitFix",
-        "title": "%extension.QAKitFix.title%"
+        "command": "devpack.QAKit.reload",
+        "title": "%extension.QAKit.reload.title%"
       }
     ]
   },
